# YadroTestPucchDecoder

./: CMakeLists.txt  Readme.md
include/pucch/core/: channel.hpp  decoder.hpp  encoder.hpp  matrix.hpp  orchestrator.hpp
include/pucch/utils/: statistics.hpp
scripts/: plot_results.py
src/: main.cpp
src/core/: channel.cpp  decoder.cpp  encoder.cpp  matrix.cpp  orchestrator.cpp
src/utils/: statistics.cpp
